refactor: clean release tree and refresh documentation